--- a/TMS/TMS/Views/Ticket/Detail.cshtml
+++ b/TMS/TMS/Views/Ticket/Detail.cshtml
@@ -64,7 +64,7 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <a href="/Index" style="font-size: 16px; padding: 15px 10px" ><i class="fa fa-arrow-left"></i>&nbsp;&nbsp; Back to Ticket list</a>
+        <a href="/Ticket/Index" style="font-size: 16px; padding: 15px 10px" ><i class="fa fa-arrow-left"></i>&nbsp;&nbsp; Back to Ticket list</a>
         <div class="box box-solid" style="margin-top: 15px">
             <div class="box-header no-padding">
                 <div class="col-lg-1 col-sm-2 no-padding text-center">
