--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
@@ -13,11 +13,11 @@
     <title>@ViewBag.Title</title>
 </head>
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
-<body class="hold-transition skin-black layout-top-nav">
+<body class="hold-transition skin-blue layout-top-nav">
     <div class="wrapper">
         <header class="main-header">
             <nav class="navbar navbar-static-top">
-                <div class="container" style="min-width: 900px">
+                <div class="container" style="min-width: 1000px">
                     <div class="navbar-header">
                         <a href="/Technician/Home" class="navbar-brand"><b>TMS</b></a>
                     </div>
@@ -25,10 +25,11 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                         <ul class="nav navbar-nav">
+                            @RenderSection("SidebarMenu", false)
                             <li class="@Html.Raw((controllerName == "ManageTicket") ? "active" : "")"><a href="/Helpdesk/ManageTicket">Ticket</a></li>
                             <li class="@Html.Raw((controllerName == "KnowledgeBase") ? "active" : "")"><a href="/KnowledgeBase">Knowledge Base</a></li>
-                            <li class="@Html.Raw((controllerName == "BusinessRule") ? "active" : "")"><a href="/KnowledgeBase">Business Rules</a></li>
-                            <li class="@Html.Raw((controllerName == "Report") ? "active" : "")"><a href="/KnowledgeBase">Report</a></li>
+                            <li class="@Html.Raw((controllerName == "BusinessRule") ? "active" : "")"><a href="/Helpdesk/BusinessRule">Business Rules</a></li>
+                            <li class="@Html.Raw((controllerName == "Report") ? "active" : "")"><a href="/Helpdesk/Report">Report</a></li>
                             <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")"><a href="/Helpdesk/Profile">My profile</a></li>
                         </ul>
                     </div>
@@ -41,21 +42,11 @@
                                 <!-- Menu toggle button -->
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-bell-o"></i>
-                                    <span class="label label-warning">10</span>
+                                    <span class="label label-warning" id="notification-count"></span>
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <li class="header">You have 10 notifications</li>
+                                <ul class="dropdown-menu" style="width: 400px;">
                                     <li>
-                                        <!-- Inner Menu: contains the notifications -->
-                                        <ul class="menu">
-                                            <li>
-                                                <!-- start notification -->
-                                                <a href="#">
-                                                    <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                                                </a>
-                                            </li>
-                                            <!-- end notification -->
-                                        </ul>
+                                        <ul class="menu" id="notification-list"></ul>
                                     </li>
                                     <li class="footer"><a href="#">View all</a></li>
                                 </ul>
@@ -78,7 +69,7 @@
                                     <!-- Menu Footer-->
                                     <li class="user-footer">
                                         <div class="pull-left">
-                                            <a href="/Profile" class="btn btn-default btn-flat">Profile</a>
+                                            <a href="/HelpDesk/Profile" class="btn btn-default btn-flat">Profile</a>
                                         </div>
                                         <div class="pull-right">
                                             @using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -98,15 +89,15 @@
             </nav>
         </header>
         <!-- Full Width Column -->
-        <div class="content-wrapper bg-gray-light">
-            <div class="container" style="min-width: 900px; padding-top: 20px">
+        <div class="content-wrapper">
+            <div class="container" style="min-width: 1000px; padding-top: 20px">
                 @RenderBody()
                 <!-- /.content -->
             </div>
             <!-- /.container -->
         </div>
         <!-- /.content-wrapper -->
-        <footer class="main-footer" style="color: #2a2a2a !important">
+        <footer class="main-footer bg-blue">
             <div class="pull-right hidden-xs">
                 <b>Version</b> 1.1.1
             </div>
@@ -115,10 +106,13 @@
         </footer>
     </div>
     <!-- ./wrapper -->
+    @RenderSection("InitModal", false)
+    @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/app")
     @Scripts.Render("~/bundles/datatables")
-    @RenderSection("scripts", required: false)
+    @RenderSection("InitScript", false)
+    @RenderSection("Scripts", false)
 </body>
 </html>
