--- a/TMS/TMS/Content/login.css
+++ b/TMS/TMS/Content/login.css
@@ -9,7 +9,7 @@
 .form {
     position: relative;
     z-index: 1;
-    background: #4d4d4d;
+    background: rgba(26, 26, 26, 0.7);
     max-width: 360px;
     margin: 0 auto 100px;
     padding: 45px;
@@ -34,7 +34,7 @@
         font-family: "Roboto", sans-serif;
         text-transform: uppercase;
         outline: 0;
-        background: #4CAF50;
+        background: #38bd3e;
         width: 100%;
         border: 0;
         padding: 15px;
@@ -52,12 +52,13 @@
 
     .form .message {
         margin: 15px 0 0;
-        color: #b3b3b3;
+        color: #FFFFFF;
         font-size: 12px;
     }
 
         .form .message a {
-            color: #4CAF50;
+            color: #FFFFFF;
+            font-weight: bold;
             text-decoration: none;
         }
 
@@ -119,9 +120,9 @@ body {
 
 body::after {
   content: "";
-  background: url(img/support_background.jpg) no-repeat center center fixed;
+  background: url(img/login.jpg) no-repeat center center fixed;
   background-size: cover;
-  opacity: 0.3;
+  opacity: 0.8;
   top: 0;
   left: 0;
   bottom: 0;
