--- a/TMS/TMS/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Views/Shared/_TopLayout.cshtml
@@ -52,21 +52,11 @@
                                 <!-- Menu toggle button -->
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-bell-o"></i>
-                                    <span class="label label-warning">10</span>
+                                    <span class="label label-warning" id="notification-count"></span>
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <li class="header">You have 10 notifications</li>
+                                <ul class="dropdown-menu" style="width: 400px;">
                                     <li>
-                                        <!-- Inner Menu: contains the notifications -->
-                                        <ul class="menu">
-                                            <li>
-                                                <!-- start notification -->
-                                                <a href="#">
-                                                    <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                                                </a>
-                                            </li>
-                                            <!-- end notification -->
-                                        </ul>
+                                        <ul class="menu" id="notification-list"></ul>
                                     </li>
                                     <li class="footer"><a href="#">View all</a></li>
                                 </ul>
@@ -109,7 +99,7 @@
             </nav>
         </header>
         <!-- Full Width Column -->
-        <div class="content-wrapper bg-light-green">
+        <div class="content-wrapper bg-lighter-green">
             <div class="container" style="min-width: 900px; padding-top: 20px">
                 @RenderBody()
                 <!-- /.content -->
