--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
@@ -335,7 +335,7 @@
                 serverSide: true,
                 paging: true,
                 sort: true,
-                "order": [[5, 'dsc']],
+                order: [[5, 'dsc']],
                 lengthChange: false,
                 filter: false,
                 drawCallback: function(){
@@ -405,8 +405,6 @@
                         },
                         "targets": 5
                     },
-
-
                     {
                         "render": function (data, type, row) {
                             var solveUrl = '/Ticket/Solve/' + row[6];
