--- a/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
@@ -125,13 +125,13 @@
                                         <p>
                                             @if (ticket.Subject.Length > 60)
                                             {
-                                                <a href="/Ticket/Detail/@ticket.ID" class="text-bold text-blue">
+                                                <a href="/Ticket/TicketDetail/@ticket.ID" class="text-bold text-blue">
                                                     @ticket.Subject.Substring(0, 59) ...
                                                 </a>
                                             }
                                             else
                                             {
-                                                <a href="/Ticket/Detail/@ticket.ID" class="text-bold text-blue">
+                                                <a href="/Ticket/TicketDetail/@ticket.ID" class="text-bold text-blue">
                                                     @ticket.Subject
                                                 </a>
                                             }
