--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
@@ -19,7 +19,7 @@
             <nav class="navbar navbar-static-top">
                 <div class="container" style="min-width: 1000px">
                     <div class="navbar-header">
-                        <a href="/Technician/Home" class="navbar-brand"><b>TMS</b></a>
+                        <a href="/Helpdesk/Home" class="navbar-brand"><b>TMS</b></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -114,5 +114,6 @@
     @Scripts.Render("~/bundles/datatables")
     @RenderSection("InitScript", false)
     @RenderSection("Scripts", false)
+    <script src="~/Content/custom-js/notification-menu-bar.js"></script>
 </body>
 </html>
