--- a/TMS/TMS/Areas/Technician/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Shared/_TopLayout.cshtml
@@ -120,5 +120,6 @@
     @Scripts.Render("~/bundles/app")
     @Scripts.Render("~/bundles/datatables")
     @RenderSection("scripts", required: false)
+    <script src="~/Content/custom-js/notification-menu-bar.js"></script>
 </body>
 </html>
