--- a/TMS/TMS/Content/custom-css/tms.css
+++ b/TMS/TMS/Content/custom-css/tms.css
@@ -35,6 +35,9 @@
     background-color: #605ca8 !important;
 }
 
+.not-read {
+    background-color: #EDF2FA !important;
+}
 
 @media screen and (min-width: 768px) {
     .modal:before {
