--- a/TMS/TMS/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Views/Shared/_TopLayout.cshtml
@@ -120,6 +120,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/app")
     @Scripts.Render("~/bundles/datatables")
+    <script src="~/Content/custom-js/notification-menu-bar.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
