--- a/TMS/TMS/Areas/HelpDesk/Views/Profile/UpdateProfile.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Profile/UpdateProfile.cshtml
@@ -18,7 +18,14 @@
                             <input type="text" class="form-control" disabled="disabled" value="@ViewBag.Username" />
                         </div>
                     </div>
-                    
+                    <!--Email-->
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Email&nbsp;<span style="color: red">*</span></label>
+                        <div class="col-sm-9">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                     <!--Fullname-->
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Fullname&nbsp;<span style="color: red">*</span></label>
