--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
@@ -170,7 +170,7 @@
                             <div class="col-md-6 col-xs-6">
                                 <label class="control-label">SOLVED BY</label>
                                 <input type="hidden" id="solveId" name="solveId" value="@Model.SolvedId">
-                                <input type="text" class="form-control" name="SolvedBy" id="solveBy" value="@Model.CreatedBy" readonly />
+                                <input type="text" class="form-control" name="SolvedBy" id="solveBy" value="@Model.SolvedBy" readonly />
                             </div>
                             <div class="col-md-6 col-xs-6">
                                 <label class="control-label">SOLVED DATE</label>
