--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
@@ -89,7 +89,7 @@
             </nav>
         </header>
         <!-- Full Width Column -->
-        <div class="content-wrapper">
+        <div class="content-wrapper bg-lighter-blue">
             <div class="container" style="min-width: 1000px; padding-top: 20px">
                 @RenderBody()
                 <!-- /.content -->
