--- a/TMS/TMS/Content/custom-css/Profile.css
+++ b/TMS/TMS/Content/custom-css/Profile.css
@@ -6,6 +6,10 @@
     background-color: #827ed0 !important;
 }
 
+.bg-lighter-blue {
+    background-color: #59a4cf !important;
+}
+
 .main-footer {
     border-top: none;
     color: #ffffff !important;
